--- a/app/app.css
+++ b/app/app.css
@@ -3,8 +3,8 @@ body {
     background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
     display: flex;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
   }
@@ -13,6 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    width: 90%;
   }
   
   button {
@@ -62,4 +63,8 @@ body {
   a {
     font-weight: 800;
     text-decoration: none;
+  }
+  
+  h1{
+    text-wrap: wrap;
   }
